# circuits

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
examples/: diode_clipper.json  distortion.json  fuzz_pedal.json  passthrough.json  rc_lowpass.json  tube_preamp.json
src/: CircuitSerializer.cpp  CircuitSerializer.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/Engine/: CircuitEngine.cpp  CircuitEngine.h  CircuitGraph.cpp  CircuitGraph.h  MNASolver.cpp  MNASolver.h
src/Engine/Components/: AudioInput.cpp  AudioInput.h  AudioOutput.cpp  AudioOutput.h  Capacitor.cpp  Capacitor.h  Component.h  Diode.h  DiodePair.h  Ground.cpp  Ground.h  Inductor.h  Potentiometer.cpp  Potentiometer.h  Resistor.cpp  Resistor.h  SoftClipper.h  Switch.cpp  Switch.h  VacuumTube.cpp  VacuumTube.h
src/Engine/WDF/: WDFCore.h  WDFEngine.cpp  WDFEngine.h  WDFNonlinear.h  WDFRTypeAdaptor.h
src/UI/: AnalogLookAndFeel.h  CircuitDesigner.cpp  CircuitDesigner.h  ComponentPalette.cpp  ComponentPalette.h  ComponentView.cpp  ComponentView.h  ControlPanel.cpp  ControlPanel.h  OscilloscopeView.cpp  OscilloscopeView.h  TopBar.cpp  TopBar.h  WireView.cpp  WireView.h
tests/: WDFTests.cpp
